mintupdate (3.8.1) helena; urgency=low

  * Bug fix: incorrect tooltip in the Preferences window (https://bugs.launchpad.net/bugs/400861)

 -- Clement Lefebvre <root@linuxmint.com>  Tue,  21 Jul 2009 16:21:00 +0000

mintupdate (3.8.0) helena; urgency=low

  * Blueprint implemented: https://blueprints.launchpad.net/linuxmint/+spec/mintupdate-visible-columns
  * Blueprint implemented: https://blueprints.launchpad.net/linuxmint/+spec/mintupdate-dimensions

 -- Clement Lefebvre <root@linuxmint.com>  Tue,  21 Jul 2009 12:28:00 +0000

mintupdate (3.7.9) gloria; urgency=low

  * Bug fix: Empty rules file (https://bugs.launchpad.net/bugs/399276)

 -- Clement Lefebvre <root@linuxmint.com>  Thu,  16 Jul 2009 14:44:00 +0000

mintupdate (3.7.8) gloria; urgency=low

  * Bug fix: No label under toolbar icons (https://bugs.launchpad.net/bugs/399705)

 -- Clement Lefebvre <root@linuxmint.com>  Thu,  16 Jul 2009 12:35:00 +0000

mintupdate (3.7.7) gloria; urgency=low

  * Updated translations
  * Fixed critical bug in Portuguese translation

 -- Clement Lefebvre <root@linuxmint.com>  Mon,  15 Jun 2009 17:00:00 +0000

mintupdate (3.7.6) gloria; urgency=low

  * Updated translations

 -- Clement Lefebvre <root@linuxmint.com>  Tue,  19 May 2009 18:23:00 +0000

mintupdate (3.7.5) gloria; urgency=low

  * Updated translations

 -- Clement Lefebvre <root@linuxmint.com>  Mon,  18 May 2009 19:19:00 +0000

mintupdate (3.7.4) gloria; urgency=low

  * Updated translations

 -- Clement Lefebvre <root@linuxmint.com>  Sun,  17 May 2009 19:54:00 +0000

mintupdate (3.7.3) gloria; urgency=low

  * Added translations

 -- Clement Lefebvre <root@linuxmint.com>  Sun,  17 May 2009 19:36:00 +0000

mintupdate (3.7.2) gloria; urgency=low

  * Restored call to vbox_main in user mode (fixes regression: icon not appearing in systray)

 -- Clement Lefebvre <root@linuxmint.com>  Sun,  17 May 2009 11:36:00 +0000

mintupdate (3.7.1) gloria; urgency=low

  * GUI is now resizable