@@ -1,5 +1,6 @@
 mintupdate (3.8.1) helena; urgency=low
 
+  * Blueprint implemented: https://blueprints.launchpad.net/linuxmint/+spec/mintupdate-blacklist-packages
   * Bug fix: incorrect tooltip in the Preferences window (https://bugs.launchpad.net/bugs/400861)
 
  -- Clement Lefebvre <root@linuxmint.com>  Tue,  21 Jul 2009 16:21:00 +0000
